quest-sys/QuEST/QuEST/include/QuEST.h

    
typedef struct {
    char* buffer;       
    int bufferSize;     
    int bufferFill;     
    int isLogging;      
} QASMLogger;
typedef struct ComplexArray
{
    qreal *real; 
    qreal *imag;
} ComplexArray;
typedef struct ComplexMatrix2
{
    qreal real[2][2];
    qreal imag[2][2];
} ComplexMatrix2;
typedef struct Qureg
{
    int isDensityMatrix;
    int numQubitsRepresented;
    int numQubitsInStateVec;
    long long int numAmpsPerChunk;
    long long int numAmpsTotal;
    int chunkId;
    int numChunks;
    ComplexArray stateVec; 
    ComplexArray pairStateVec;
    ComplexArray deviceStateVec;
    qreal *firstLevelReduction, *secondLevelReduction;
    QASMLogger* qasmLog;
} Qureg;
typedef struct QuESTEnv
{
    int rank;
    int numRanks;
    unsigned long int* seeds;
    int numSeeds;
} QuESTEnv;
void phaseShift(Qureg qureg, int targetQubit, qreal angle);
void controlledPhaseShift(Qureg qureg, int idQubit1, int idQubit2, qreal angle);
void multiControlledPhaseShift(Qureg qureg, int *controlQubits, int numControlQubits, qreal angle);
void controlledPhaseFlip (Qureg qureg, int idQubit1, int idQubit2);
void multiControlledPhaseFlip(Qureg qureg, int *controlQubits, int numControlQubits);
void sGate(Qureg qureg, int targetQubit);
void tGate(Qureg qureg, int targetQubit);
QuESTEnv createQuESTEnv(void);
void destroyQuESTEnv(QuESTEnv env);
void syncQuESTEnv(QuESTEnv env);
void reportQuESTEnv(QuESTEnv env);
void unitary(Qureg qureg, int targetQubit, ComplexMatrix2 u);
void pauliZ(Qureg qureg, int targetQubit);
void invalidQuESTInputError(const char* errMsg, const char* errFunc);