quest-sys/src/bindings.rs

extern "C" {
    #[doc = " Introduce a phase factor \\f$ \\exp(i \\theta) \\f$ on state \\f$ |11\\rangle \\f$ of qubits"]
    #[doc = " \\p idQubit1 and \\p idQubit2."]
    #[doc = " For angle \\f$\\theta\\f$, this effects the unitary"]
    #[doc = " \\f["]
    #[doc = " \\begin{pmatrix}"]
    #[doc = " 1 & & & \\\\"]
    #[doc = " & 1 & & \\\\"]
    #[doc = " & & 1 & \\\\"]
    #[doc = " & & & \\exp(i \\theta)"]
    #[doc = " \\end{pmatrix}"]
    #[doc = " \\f]"]
    #[doc = " on \\p idQubit1 and \\p idQubit2."]
    #[doc = ""]
    #[doc = "\\f["]
    #[doc = "\\begin{tikzpicture}[scale=.5]"]
    #[doc = "\\node[draw=none] at (-3.5, 2) {qubit1};"]
    #[doc = "\\node[draw=none] at (-3.5, 0) {qubit2};"]
    #[doc = ""]
    #[doc = "\\draw (-2, 2) -- (2, 2);"]
    #[doc = "\\draw[fill=black] (0, 2) circle (.2);"]
    #[doc = "\\draw (0, 2) -- (0, 1);"]
    #[doc = ""]
    #[doc = "\\draw (-2,0) -- (-1, 0);"]
    #[doc = "\\draw (1, 0) -- (2, 0);"]
    #[doc = "\\draw (-1,-1)--(-1,1)--(1,1)--(1,-1)--cycle;"]
    #[doc = "\\node[draw=none] at (0, 0) {$R_\\theta$};"]
    #[doc = "\\end{tikzpicture}"]
    #[doc = "\\f]"]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - phaseShift()"]
    #[doc = " - multiControlledPhaseShift()"]
    #[doc = ""]
    #[doc = " @ingroup unitary"]
    #[doc = " @param[in,out] qureg object representing the set of all qubits"]
    #[doc = " @param[in] idQubit1 first qubit in the state to phase shift"]
    #[doc = " @param[in] idQubit2 second qubit in the state to phase shift"]
    #[doc = " @param[in] angle amount by which to shift the phase in radians"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p idQubit1 or \\p idQubit2 are outside [0, \\p qureg.numQubitsRepresented)"]
    #[doc = " - if \\p idQubit1 and \\p idQubit2 are equal"]
    #[doc = " @author Tyson Jones"]
    pub fn controlledPhaseShift(
        qureg: Qureg,
        idQubit1: ::std::os::raw::c_int,
        idQubit2: ::std::os::raw::c_int,
        angle: f64,
    );
}
extern "C" {
    #[doc = " Introduce a phase factor \\f$ \\exp(i \\theta) \\f$ on state \\f$ |1 \\dots 1 \\rangle \\f$"]
    #[doc = " of the passed qubits."]
    #[doc = ""]
    #[doc = "\\f["]
    #[doc = "\\begin{tikzpicture}[scale=.5]"]
    #[doc = "\\node[draw=none] at (-3.5, 2) {controls};"]
    #[doc = "\\node[draw=none] at (1, .7) {$\\theta$};"]
    #[doc = ""]
    #[doc = "\\node[draw=none] at (0, 6) {$\\vdots$};"]
    #[doc = "\\draw (0, 5) -- (0, 4);"]
    #[doc = ""]
    #[doc = "\\draw (-2, 4) -- (2, 4);"]
    #[doc = "\\draw[fill=black] (0, 4) circle (.2);"]
    #[doc = "\\draw (0, 4) -- (0, 2);"]
    #[doc = ""]
    #[doc = "\\draw (-2, 2) -- (2, 2);"]
    #[doc = "\\draw[fill=black] (0, 2) circle (.2);"]
    #[doc = "\\draw (0, 2) -- (0, 0);"]
    #[doc = ""]
    #[doc = "\\draw (-2,0) -- (2, 0);"]
    #[doc = "\\draw[fill=black] (0, 0) circle (.2);"]
    #[doc = "\\end{tikzpicture}"]
    #[doc = "\\f]"]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - phaseShift()"]
    #[doc = " - controlledPhaseShift()"]
    #[doc = " - controlledPhaseFlip()"]
    #[doc = " - multiControlledPhaseFlip()"]
    #[doc = ""]
    #[doc = " @ingroup unitary"]
    #[doc = " @param[in,out] qureg object representing the set of all qubits"]
    #[doc = " @param[in] controlQubits array of qubits to phase shift"]
    #[doc = " @param[in] numControlQubits the length of array \\p controlQubits"]
    #[doc = " @param[in] angle amount by which to shift the phase in radians"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p numControlQubits is outside [1, \\p qureg.numQubitsRepresented])"]
    #[doc = " - if any qubit index in \\p controlQubits is outside [0, \\p qureg.numQubitsRepresented])"]
    #[doc = " - if the qubits in \\p controlQubits are not unique"]
    #[doc = " @author Tyson Jones"]
    pub fn multiControlledPhaseShift(
        qureg: Qureg,
        controlQubits: *mut ::std::os::raw::c_int,
        numControlQubits: ::std::os::raw::c_int,
        angle: f64,
    );
}
extern "C" {
    #[doc = " Apply the (two-qubit) controlled phase flip gate, also known as the controlled pauliZ gate."]
    #[doc = " For each state, if both input qubits have value one, multiply the amplitude of that state by -1. This applies the two-qubit unitary:"]
    #[doc = " \\f["]
    #[doc = " \\begin{pmatrix}"]
    #[doc = " 1 \\\\"]
    #[doc = " & 1 \\\\\\"]
    #[doc = " & & 1 \\\\"]
    #[doc = " & & & -1"]
    #[doc = " \\end{pmatrix}"]
    #[doc = " \\f]"]
    #[doc = " with circuit diagram:"]
    #[doc = "\\f["]
    #[doc = "\\begin{tikzpicture}[scale=.5]"]
    #[doc = "\\node[draw=none] at (-3.5, 2) {idQubit1};"]
    #[doc = "\\node[draw=none] at (-3.5, 0) {idQubit2};"]
    #[doc = ""]
    #[doc = "\\draw (-2, 2) -- (2, 2);"]
    #[doc = "\\draw[fill=black] (0, 2) circle (.2);"]
    #[doc = "\\draw (0, 2) -- (0, 0);"]
    #[doc = ""]
    #[doc = "\\draw (-2,0) -- (2, 0);"]
    #[doc = "\\draw[fill=black] (0, 0) circle (.2);"]
    #[doc = "\\end{tikzpicture}"]
    #[doc = "\\f]"]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - pauliZ()"]
    #[doc = " - phaseShift()"]
    #[doc = " - multiControlledPhaseFlip()"]
    #[doc = ""]
    #[doc = " @ingroup unitary"]
    #[doc = " @param[in,out] qureg object representing the set of all qubits"]
    #[doc = " @param[in] idQubit1, idQubit2 qubits to operate upon"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p idQubit1 or \\p idQubit2 are outside [0, \\p qureg.numQubitsRepresented)"]
    #[doc = " - if \\p idQubit1 and \\p idQubit2 are equal"]
    #[doc = " @author Tyson Jones"]
    pub fn controlledPhaseFlip(
        qureg: Qureg,
        idQubit1: ::std::os::raw::c_int,
        idQubit2: ::std::os::raw::c_int,
    );
}
extern "C" {
    #[doc = " Apply the multiple-qubit controlled phase flip gate, also known as the multiple-qubit controlled pauliZ gate."]
    #[doc = " For each state, if all control qubits have value one, multiply the amplitude of that state by -1. This applies the many-qubit unitary:"]
    #[doc = " \\f["]
    #[doc = " \\begin{pmatrix}"]
    #[doc = " 1 \\\\"]
    #[doc = " & 1 \\\\\\"]
    #[doc = " & & \\ddots \\\\"]
    #[doc = " & & & 1 \\\\"]
    #[doc = " & & & & -1"]
    #[doc = " \\end{pmatrix}"]
    #[doc = " \\f]"]
    #[doc = " on the control qubits."]
    #[doc = ""]
    #[doc = " \\f["]
    #[doc = "\\begin{tikzpicture}[scale=.5]"]
    #[doc = "\\node[draw=none] at (-3.5, 2) {controls};"]
    #[doc = ""]
    #[doc = "\\node[draw=none] at (0, 6) {$\\vdots$};"]
    #[doc = "\\draw (0, 5) -- (0, 4);"]
    #[doc = ""]
    #[doc = "\\draw (-2, 4) -- (2, 4);"]
    #[doc = "\\draw[fill=black] (0, 4) circle (.2);"]
    #[doc = "\\draw (0, 4) -- (0, 2);"]
    #[doc = ""]
    #[doc = "\\draw (-2, 2) -- (2, 2);"]
    #[doc = "\\draw[fill=black] (0, 2) circle (.2);"]
    #[doc = "\\draw (0, 2) -- (0, 0);"]
    #[doc = ""]
    #[doc = "\\draw (-2,0) -- (2, 0);"]
    #[doc = "\\draw[fill=black] (0, 0) circle (.2);"]
    #[doc = "\\end{tikzpicture}"]
    #[doc = "\\f]"]
    #[doc = ""]
    #[doc = " @ingroup unitary"]
    #[doc = " @param[in,out] qureg object representing the set of all qubits"]
    #[doc = " @param[in] controlQubits array of input qubits"]
    #[doc = " @param[in] numControlQubits number of input qubits"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p numControlQubits is outside [1, \\p qureg.numQubitsRepresented)"]
    #[doc = " - if any qubit in \\p controlQubits is outside [0, \\p qureg.numQubitsRepresented)"]
    #[doc = " - if any qubit in \\p qubits is repeated"]
    #[doc = " @author Tyson Jones"]
    pub fn multiControlledPhaseFlip(
        qureg: Qureg,
        controlQubits: *mut ::std::os::raw::c_int,
        numControlQubits: ::std::os::raw::c_int,
    );
}
extern "C" {
    #[doc = " Apply the single-qubit S gate."]
    #[doc = " This is a rotation of \\f$\\pi/2\\f$ around the Z-axis on the Bloch sphere, or the unitary:"]
    #[doc = " \\f["]
    #[doc = " \\begin{pmatrix}"]
    #[doc = " 1 & 0 \\\\"]
    #[doc = " 0 & i"]
    #[doc = " \\end{pmatrix}"]
    #[doc = " \\f]"]
    #[doc = " with circuit diagram:"]
    #[doc = "\\f["]
    #[doc = "\\begin{tikzpicture}[scale=.5]"]
    #[doc = "\\node[draw=none] at (-3.5, 0) {target};"]
    #[doc = ""]
    #[doc = "\\draw (-2,0) -- (-1, 0);"]
    #[doc = "\\draw (1, 0) -- (2, 0);"]
    #[doc = "\\draw (-1,-1)--(-1,1)--(1,1)--(1,-1)--cycle;"]
    #[doc = "\\node[draw=none] at (0, 0) {S};"]
    #[doc = "\\end{tikzpicture}"]
    #[doc = "\\f]"]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - tGate()"]
    #[doc = ""]
    #[doc = " @ingroup unitary"]
    #[doc = " @param[in,out] qureg object representing the set of all qubits"]
    #[doc = " @param[in] targetQubit qubit to operate upon"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p targetQubit is outside [0, \\p qureg.numQubitsRepresented)"]
    #[doc = " @author Ania Brown (state-vector)"]
    #[doc = " @author Tyson Jones (density matrix, doc)"]
    pub fn sGate(qureg: Qureg, targetQubit: ::std::os::raw::c_int);
}
extern "C" {
    #[doc = " Apply the single-qubit T gate."]
    #[doc = " This is a rotation of \\f$\\pi/4\\f$ around the Z-axis on the Bloch sphere, or the unitary:"]
    #[doc = " \\f["]
    #[doc = " \\begin{pmatrix}"]
    #[doc = " 1 & 0 \\\\"]
    #[doc = " 0 & \\exp\\left(i \\frac{\\pi}{4}\\right)"]
    #[doc = " \\end{pmatrix}"]
    #[doc = " \\f]"]
    #[doc = " with circuit diagram:"]
    #[doc = "\\f["]
    #[doc = "\\begin{tikzpicture}[scale=.5]"]
    #[doc = "\\node[draw=none] at (-3.5, 0) {target};"]
    #[doc = ""]
    #[doc = "\\draw (-2,0) -- (-1, 0);"]
    #[doc = "\\draw (1, 0) -- (2, 0);"]
    #[doc = "\\draw (-1,-1)--(-1,1)--(1,1)--(1,-1)--cycle;"]
    #[doc = "\\node[draw=none] at (0, 0) {T};"]
    #[doc = "\\end{tikzpicture}"]
    #[doc = "\\f]"]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - sGate()"]
    #[doc = ""]
    #[doc = " @ingroup unitary"]
    #[doc = " @param[in,out] qureg object representing the set of all qubits"]
    #[doc = " @param[in] targetQubit qubit to operate upon"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p targetQubit is outside [0, \\p qureg.numQubitsRepresented)"]
    #[doc = " @author Ania Brown (state-vector)"]
    #[doc = " @author Tyson Jones (density matrix, doc)"]
    pub fn tGate(qureg: Qureg, targetQubit: ::std::os::raw::c_int);
}
extern "C" {
    #[doc = " Create the QuEST execution environment."]
    #[doc = " This should be called only once, and the environment should be freed with destroyQuESTEnv at the end"]
    #[doc = " of the user's code."]
    #[doc = " If something needs to be done to set up the execution environment, such as"]
    #[doc = " initializing MPI when running in distributed mode, it is handled here."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - reportQuESTEnv()"]
    #[doc = " - destroyQuESTEnv()"]
    #[doc = " - syncQuESTEnv()"]
    #[doc = ""]
    #[doc = " @ingroup type"]
    #[doc = " @return object representing the execution environment. A single instance is used for each program"]
    #[doc = " @author Ania Brown"]
    pub fn createQuESTEnv() -> QuESTEnv;
}
extern "C" {
    #[doc = " Destroy the QuEST environment."]
    #[doc = " If something needs to be done to clean up the execution environment, such as"]
    #[doc = " finalizing MPI when running in distributed mode, it is handled here"]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - createQuESTEnv()"]
    #[doc = ""]
    #[doc = " @ingroup type"]
    #[doc = " @param[in] env object representing the execution environment. A single instance is used for each program"]
    #[doc = " @author Ania Brown"]
    pub fn destroyQuESTEnv(env: QuESTEnv);
}
